tests/ui/parser/recover/missing-dot-on-if-condition-expression-fixable.stderr
error: expected `{`, found `map`
  --> $DIR/missing-dot-on-if-condition-expression-fixable.rs:4:30
   |
LL |     for _ in [1, 2, 3].iter()map(|x| x) {}
   |                              ^^^ expected `{`
   |
help: you might have meant to write a method call
   |
LL |     for _ in [1, 2, 3].iter().map(|x| x) {}
   |                              +

error: expected `{`, found `0`
  --> $DIR/missing-dot-on-if-condition-expression-fixable.rs:10:16
   |
LL |     for _ in x 0 {}
   |                ^ expected `{`
   |
help: you might have meant to write a field access
   |
LL |     for _ in x.0 {}
   |               +

error: expected `{`, found `0.0`
  --> $DIR/missing-dot-on-if-condition-expression-fixable.rs:16:16
   |
LL |     for _ in x 0.0 {}
   |                ^^^ expected `{`
   |
help: you might have meant to write a field access
   |
LL |     for _ in x.0.0 {}
   |               +

error: expected `{`, found `unwrap`
  --> $DIR/missing-dot-on-if-condition-expression-fixable.rs:22:16
   |
LL |     for _ in x unwrap() {}
   |                ^^^^^^ expected `{`
   |
help: you might have meant to write a method call
   |
LL |     for _ in x.unwrap() {}
   |               +

error: expected `{`, found `a`
  --> $DIR/missing-dot-on-if-condition-expression-fixable.rs:28:16
   |
LL |     for _ in x a.b {}
   |                ^ expected `{`
   |
help: you might have meant to write a field access
   |
LL |     for _ in x.a.b {}
   |               +

error: aborting due to 5 previous errors

